Finish test pages

--- a/app/views/test_pages/help.html.erb
+++ b/app/views/test_pages/help.html.erb
@@ -1,2 +1,5 @@
-<h1>TestPages#help</h1>
-<p>Find me in app/views/test_pages/help.html.erb</p>
+<% provide(:title, 'Help') %>
+<h1>Help</h1>
+<p>
+  Can me help you?  <a href="#"> help me >"<</a> <a href="#"> help me >"<</a> <a href="#"> help me >"<</a>
+</p>
