--- a/app/views/test_pages/home.html.erb
+++ b/app/views/test_pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>TestPages#home</h1>
-<p>Find me in app/views/test_pages/home.html.erb</p>
+<% provide(:title, 'Home') %>
+
+<h1>Test App</h1>
+<p>
+  Wellcom to 
+  <a href="#"> My Test App</a>
+</p>
